sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var n=getNombreValeurs()
def fini():Boolean {
	return (for (k<-1 to n-2) {
		plusPetit(k,k+1)
	})
}

	
while(!fini){
	
		for (k<- 1 to n-2){
			if (plusPetit(k+1,k)){
				echange(k+1,k)
			}
		}
	}
}
